<resources>
    <string name="app_name">ExpenseTracker</string>

    <bool name="forConnection">true</bool>

    <string name="fp_login">Forgot your Password?</string>
    <string name="acc_exists">Already have an account?</string>
    <string name="to_login">Log In</string>
    <string name="get_started_text">Get Started</string>
    <string name="log_in">Log in</string>


    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginPage_text">Welcome to Expense Tracker</string>

    <string name="signupPage_text">Create Account</string>
    <string name="background">background</string>

    <string name="userHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="pwHint">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="tab_home">Home</string>
    <string name="tab_logs">Logs</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_goal">Goal</string>

    <string name="not_valid_username">Enter a valid Username</string>
    <string name="not_valid_email">Enter a valid Email</string>

    <string name="weak_pass_text">Weak Password Strength</string>
    <string name="med_pass_text">Medium Password Strength</string>
    <string name="str_pass_text">Strong Password Strength</string>

    <string name="required">Required*</string>
    <string name="eula_privacy">*By Signing up, You agree to our EULA and our Privacy Policy</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="invalid_username_length">Invalid username length</string>
    <string name="valid_username">Valid username</string>
    <string name="invalid_email">Invalid email</string>
    <string name="valid_email">Valid email</string>
    <string name="password_is_weak">Password is weak</string>
    <string name="valid_password_length">Valid password length</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="passwords_match">Passwords match</string>
    <string name="eula">EULA</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>